# Nobify

./: .gitignore  THIRD_PARTY_NOTICES.md  arena.c  arena.h  arena_dyn.h  build_model.c  build_model.h  ds_adapter.c  ds_adapter.h  genex_evaluator.h  logic_model.c  logic_model.h  main.c  math_parser.c  math_parser.h  nob  nob.c  nob.h  parser.c  stb_ds.h  sys_utils.h  toolchain_driver.c  toolchain_driver.h  transpiler.c  transpiler.h  transpiler_codegen.inc.c  transpiler_dispatcher.inc.c  transpiler_evaluator.inc.c
buid/: nobify
docs/: Fase_1__transpiler_evaluator_para_buid_model.tex  Fase_2__problemas_arquiteturais_identificados_no_transpiler_evaluator_inc_c.tex  Fase_3__Implementação_do_Motor_de_Lógica__Specification_Pattern.tex  Fase_3__Relatório_de_Auditoria_Técnica_do_Build_Model.tex  Fase_4__Plano_de_Adoção_de_Dependências_e_Refatoração_de_Infraestrutura.tex  Im dumb.md  README.md  arena.md  build_model_architecture_v2.md  build_model_builder_v2_spec.md  build_model_freeze_v2_spec.md  build_model_query_v2_spec.md  build_model_v2_benchmark_notes.md  build_model_v2_contract.md  build_model_v2_readiness_checklist.md  build_model_v2_roadmap.md  build_model_v2_transition_recommendations.md  build_model_validate_v2_spec.md  cmake_artifact_parity_roadmap.md  estrutura de arquivos C.md  eval_dispatcher_v2_spec.md  eval_expr_v2_spec.md  evaluator_codegen_closure_roadmap.md  evaluator_v2_compat_architecture.md  evaluator_v2_coverage_status.md  evaluator_v2_spec.md  event_ir_v2_spec.md  (+10 more)
test_v2/artifact_parity/real_projects/consumers/nlohmann_json/: CMakeLists.txt  main.cpp
(+625 files in other folders)
